# raspi-sump

./: .gitignore  CONTRIBUTING.md  LICENSE  License  MANIFEST.in  README.md  VERSION  changelog  pyproject.toml  setup.py
.pybuild/cpython3_3.13_raspisump/: raspisump-2.0a10-py3-none-any.whl  raspisump-2.0a13-py3-none-any.whl  raspisump-2.0a14-py3-none-any.whl  raspisump-2.0a2-py3-none-any.whl  raspisump-2.0a7-py3-none-any.whl  raspisump-2.0a8-py3-none-any.whl  raspisump-2.0rc2-py3-none-any.whl  raspisump-2.0rc3-py3-none-any.whl
.pybuild/cpython3_3.13_raspisump/scripts/: alerttest  rsump  rsumpchart  rsumpsupport  rsumpwebchart
betatesting/: README.md  python3-pinsource_0.0.4~a1_all.deb  raspisump_2.0~a51_all.deb
betatesting/screenshots/: README.md
conf/: credentials.conf  lighttpd.conf  raspisump.conf
conf/charts/: README.md
conf/csv/: README.md
conf/data/: README.md
conf/logs/: README.md
conf/nginx/: raspi-sump
conf/sudoers/: raspisump-web
conf/support/: README.md  support.py
conf/systemd/: README.md  raspisump.service  rsumpweb.service  rsumpwebchart.service  rsumpwebchart.timer
conf/web/: index.html
conf/web/css/: raspi.css  raspi.css~
conf/web/css/inc/: VERSION  copyright
cron/: README.md  crontab  move_file.sh  picrontab  rootcrontab
debian/: changelog  control  files  postinst  postrm  prerm  raspisump.install  raspisump.postinst.debhelper  raspisump.postrm.debhelper  raspisump.prerm.debhelper  rules
debian/raspisump/DEBIAN/: conffiles  control  md5sums  postinst  postrm  preinst  prerm
debian/raspisump/etc/nginx/sites-available/: raspi-sump
debian/raspisump/lib/systemd/system/: raspisump.service  rsumpwebchart.service
debian/raspisump/usr/lib/python3/dist-packages/raspisump/: alerts.py  cli.py  config_values.py  emailtest.py  log.py  todaychart.py  webchart.py
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0a10.dist-info/: METADATA
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0a13.dist-info/: METADATA
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0a14.dist-info/: METADATA
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0a2.dist-info/: METADATA  entry_points.txt
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0a7.dist-info/: METADATA
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0a8.dist-info/: METADATA
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0rc2.dist-info/: METADATA  top_level.txt
debian/raspisump/usr/lib/python3/dist-packages/raspisump-2.0rc3.dist-info/: METADATA
debian/raspisump/usr/share/doc/raspisump/: copyright
debian/raspisump/usr/share/raspi-sump/examples/: raspisump.conf
debian/raspisump/usr/share/raspi-sump/web/: index.html
debian/raspisump/usr/share/raspi-sump/web/css/: includes.js  raspi.css
debian/raspisump/usr/share/raspi-sump/web/css/inc/: VERSION
docs/: Installation_Instructions.md  README.md  automated_install.md  install-version1.9-bullseye-legacy.md  install.md  install_version_1.10-in_virtualenv.md  manual_install.md  quick_start.md  upgrade v1.x.md  upgrade.md  upgrade_systemd.md  upgrade_to_version_1.9.md
raspi-sump/: monitor.py  raspi-sump-notes.py  raspi-sump.py  sonar.py
raspi-sump/cron/: crontab  move_file.sh
raspisump/: .raspisump.conf  alerts.py  checkpid.py  cli.py  config_values.py  database.py  emailtest.py  heartbeat.py  log.py  raspisump.py  raspisump_alternate.py  reading.py  sensor.py  today_chart.py  todaychart.py  webchart.py
raspisump/static/: raspi.css  sumpChart.js
raspisump/templates/: _nav.html  base.html  history.html  home.html
raspisump/templates/admin/: backup.html  config.html  csv.html  import.html  index.html  login.html  restarting.html  security.html  support.html
raspisump/web/: __init__.py  auth.py  charts.py  config_helpers.py  credentials_helpers.py  stats.py  system.py
raspisump/web/views/: admin.py  api.py  backup.py  config.py  csvdata.py  csvimport.py  history.py  home.py  security.py  support.py
simulations/: README.md  sim-pump-fail.py  sim-pump-working.py
tests/: README.md  monitor_tests.py  sensor_tests.py  sump_tests.py  test_config_values.py  test_import_csv.py  test_logging.py  test_rsumplog.py  test_sump.py  test_todaychart.py  test_web_admin.py  test_web_backup.py  test_web_config.py  test_web_csvdata.py  test_web_csvimport.py  test_web_history.py  test_web_home.py  test_web_stats.py  test_web_support.py  test_web_system.py  test_webchart.py  tests_logging.py  tests_sump.py
web/: index.html
