[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raspisump"
version = "2.0a8"
description = "A sump pit monitoring system for Raspberry Pi"
readme = "README.md"
license = {text = "MIT License"}
authors = [{name = "Al Audet", email = "alaudet@linuxnorth.org"}]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://www.linuxnorth.org/raspi-sump/"
Download = "https://github.com/alaudet/raspi-sump/releases"

[project.scripts]
rsump = "raspisump.cli:rsump"
rsumpchart = "raspisump.cli:rsumpchart"
rsumpwebchart = "raspisump.cli:rsumpwebchart"
alerttest = "raspisump.cli:alerttest"
rsumpsupport = "raspisump.cli:rsumpsupport"

[tool.setuptools.packages.find]
where = ["."]
include = ["raspisump*"]

[tool.pytest.ini_options]
# DeprecationWarnings from lgpio's SWIG-generated C extension (SwigPyPacked,
# SwigPyObject, swigvarlink missing __module__).  These are a known upstream
# issue in lgpio and are not caused by raspisump code.
filterwarnings = [
    "ignore::DeprecationWarning:lgpio",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swig:DeprecationWarning",
]
