[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raspisump"
version = "2.0a38"
description = "A sump pit monitoring system for Raspberry Pi"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Al Audet", email = "alaudet@linuxnorth.org"}]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://www.linuxnorth.org/raspi-sump/"
Download = "https://github.com/alaudet/raspi-sump/releases"

[project.scripts]
rsump = "raspisump.cli:rsump"
rsumpchart = "raspisump.cli:rsumpchart"
rsumpwebchart = "raspisump.cli:rsumpwebchart"
rsumplog = "raspisump.cli:rsumplog"
rsumpimport = "raspisump.cli:rsumpimport"
alerttest = "raspisump.cli:alerttest"
rsumpsupport = "raspisump.cli:rsumpsupport"
rsumpweb = "raspisump.web:serve"

[tool.setuptools.packages.find]
where = ["."]
include = ["raspisump*"]

[tool.setuptools.package-data]
raspisump = ["templates/**/*", "templates/*", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
# DeprecationWarnings from lgpio's SWIG-generated C extension (SwigPyPacked,
# SwigPyObject, swigvarlink missing __module__).  These are a known upstream
# issue in lgpio and are not caused by raspisump code.
filterwarnings = [
    "ignore::DeprecationWarning:lgpio",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swig:DeprecationWarning",
]
